Use grid system

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,1 +1,11 @@
-' FizzBuzz JS
+.main.row
+  .col-xs-12
+.controllers.row
+  .col-xs-3
+    ' Fizz
+  .col-xs-3
+    ' Buzz
+  .col-xs-3
+    ' FizzBuzz
+  .col-xs-3
+    ' Other
