Lay main view out

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,5 +1,14 @@
 .main.row
-  .col-xs-12
+  #start.row
+    .col-xs-12
+      button#start.btn.btn-default type='button'
+        ' Start
+  #number.row
+    .col-xs-12
+      'Number
+  #score.row
+    .col-xs-12
+      'Score
 .controllers.row
   .col-xs-3
     ' Fizz
