Show random number

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -4,7 +4,7 @@
       button#start.btn.btn-default type='button'
         ' Start
   #number.row
-    .col-xs-12
+    #placeholder.col-xs-12
       'Number
   #score.row
     .col-xs-12
