Make controller buttons

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -11,10 +11,14 @@
       'Score
 .controllers.row
   .col-xs-3
-    ' Fizz
+    button#fizz.btn.btn-default type='button'
+      ' Fizz
   .col-xs-3
-    ' Buzz
+    button#buzz.btn.btn-default type='button'
+      ' Buzz
   .col-xs-3
-    ' FizzBuzz
+    button#fizzbuzz.btn.btn-default type='button'
+      ' FizzBuzz
   .col-xs-3
-    ' Other
+    button#other.btn.btn-default type='button'
+      ' Other
