Change background color when button is pushed

--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -1,3 +1,14 @@
+$correct: #A6E39D;
+$incorrect: #EAA8BF;
+
+.correct {
+  background-color: $correct;
+}
+
+.incorrect {
+  background-color: $incorrect;
+}
+
 .main {
   height: 400px;
 }
