Fix id duplication

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,12 +1,12 @@
 .main.row
-  #start.row
+  #start-container.row
     .col-xs-12
       button#start.btn.btn-default type='button'
         ' Start
-  #number.row
+  #number-container.row
     #placeholder.col-xs-12
       'Number
-  #score.row
+  #score-container.row
     .col-xs-12
       'Score
 .controllers.row
