--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,15 +1,15 @@
 .main.row
-  #start-container.row
+  #start-container.row.text-center
     .col-xs-12
       button#start.btn.btn-default type='button'
         ' Start
-  #number-container.row
+  #number-container.row.text-center
     #placeholder.col-xs-12
       'Number
   #score-container.row
     .col-xs-12
       'Score
-.controllers.row
+.controllers.row.text-center
   .col-xs-3
     button#fizz.btn.btn-default type='button'
       ' Fizz
