Make start button large and centered

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,7 +1,7 @@
 .main.row
   #start-container.row.text-center
     .col-xs-12
-      button#start.btn.btn-default type='button'
+      button#start.btn-lg.btn-default type='button'
         ' Start
   #number-container.row.text-center
     #placeholder.col-xs-12
