Set timeout of game is over

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -9,6 +9,8 @@
   #score-container.row
     .col-xs-12
       'Score
+      button#start.btn-lg.btn-default type='button'
+        ' Start
 .controllers.row.text-center
   .col-xs-3
     button#fizz.btn.btn-default type='button'
