Score correct number

--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -21,3 +21,12 @@ $incorrect: #EAA8BF;
 #start {
   margin-top: 100px;
 }
+
+#score {
+  margin-top: 80px;
+  font-size: 80pt;
+  font-weight: bold;
+}
+#restart {
+  margin-top: 60px;
+}
