--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -6,11 +6,12 @@
   #number-container.row.text-center
     #placeholder.col-xs-12
       'Number
-  #score-container.row
+  #score-container.row.text-center
     .col-xs-12
-      'Score
-      button#start.btn-lg.btn-default type='button'
-        ' Start
+      #score
+        ' Score
+      button#restart.btn-lg.btn-default type='button'
+        ' Restart
 .controllers.row.text-center
   .col-xs-3
     button#fizz.btn.btn-default type='button'
