Make controller buttons close each other

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,7 +1,7 @@
 .main.row
   #start-container.row.text-center
     .col-xs-12
-      button#start.btn-lg.btn-default type='button'
+      button#start.cntl.btn-lg.btn-default type='button'
         ' Start
   #number-container.row.text-center
     #placeholder.col-xs-12
@@ -10,18 +10,20 @@
     .col-xs-12
       #score
         ' Score
-      button#restart.btn-lg.btn-default type='button'
+      button#restart.cntl.btn-lg.btn-default type='button'
         ' Restart
 .controllers.row.text-center
-  .col-xs-3
-    button#fizz.btn.btn-default type='button'
+  .col-xs-2
+  .col-xs-2
+    button#fizz.cntl.btn.btn-default type='button'
       ' Fizz
-  .col-xs-3
-    button#buzz.btn.btn-default type='button'
+  .col-xs-2
+    button#buzz.cntl.btn.btn-default type='button'
       ' Buzz
-  .col-xs-3
-    button#fizzbuzz.btn.btn-default type='button'
+  .col-xs-2
+    button#fizzbuzz.cntl.btn.btn-default type='button'
       ' FizzBuzz
-  .col-xs-3
-    button#other.btn.btn-default type='button'
+  .col-xs-2
+    button#other.cntl.btn.btn-default type='button'
       ' Other
+  .col-xs-2
