Restrict max-width of .controllers

--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -13,6 +13,11 @@ $incorrect: #EAA8BF;
   height: 400px;
 }
 
+.controllers {
+  max-width: 600px;
+  margin: auto;
+}
+
 #placeholder {
   font-size: 128pt;
   font-weight: bold;
